--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,6 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "a2global/crm-bundle": "*@dev",
         "guzzlehttp/guzzle": "^6.5",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/apache-pack": "^1.0",
@@ -83,6 +82,6 @@
     },
     "repositories": [{
         "type": "path",
-        "url": "../crm-bundle"
+        "url": "../Ephedrinum"
     }]
 }
